--- a/process-aggregator/pom.xml
+++ b/process-aggregator/pom.xml
@@ -29,7 +29,15 @@ You should have received a copy of the GNU Lesser General Public License along w
 	<dependencies>
 		<dependency>
 			<groupId>tribefire.extension.process</groupId>
-			<artifactId>process-module</artifactId>
+			<artifactId>process-initializer</artifactId>
+			<version>${V.tribefire.extension.process}</version>
+			<classifier>asset</classifier>
+            <type>man</type>
+            <?tag asset?>
+		</dependency>
+		<dependency>
+			<groupId>tribefire.extension.process</groupId>
+			<artifactId>process-wb-initializer</artifactId>
 			<version>${V.tribefire.extension.process}</version>
 			<classifier>asset</classifier>
             <type>man</type>
