--- a/process-processing-test/pom.xml
+++ b/process-processing-test/pom.xml
@@ -111,5 +111,10 @@ You should have received a copy of the GNU Lesser General Public License along w
             <version>${V.tribefire.extension.process}</version>
             <?tag asset ?>
         </dependency>
+		<dependency>
+		    <groupId>org.camunda.bpm.model</groupId>
+		    <artifactId>camunda-bpmn-model</artifactId>
+		    <version>7.20.0</version>
+		</dependency>        
     </dependencies>
 </project>
